frontend/y.output
Grammar

    0 $accept: program $end

    1 program: ε
    2        | program module

    3 module: funcDefinition
    4       | declaration

    5 declaration: varDeclaration
    6            | statement

    7 varDeclaration: type T_IDENTIFIER T_ASSIGN expression ';'

    8 type: T_INT_TYPE
    9     | T_CHAR_TYPE
   10     | T_BOOL_TYPE
   11     | T_VOID_TYPE

   12 funcDefinition: T_FUNC function

   13 function: T_IDENTIFIER T_LEFT_PAREN parameters T_RIGHT_PAREN returnType block

   14 returnType: ε
   15           | T_ARROW type

   16 parameters: ε
   17           | type T_IDENTIFIER
   18           | parameters T_COMMA type T_IDENTIFIER

   19 args: ε
   20     | assignExpression
   21     | args T_COMMA assignExpression

   22 statement: ifStatement
   23          | returnStatement
   24          | expressionStatement

   25 ifStatement: T_IF T_LEFT_PAREN expression T_RIGHT_PAREN block else

   26 else: ε
   27     | T_ELSE block

   28 returnStatement: T_RETURN expression ';'

   29 block: T_LEFT_BRACE blockBody T_RIGHT_BRACE

   30 blockBody: ε
   31          | blockBody declaration

   32 expressionStatement: expression ';'

   33 expression: assignExpression

   34 assignExpression: conditionalExpression
   35                 | T_IDENTIFIER T_ASSIGN expression

   36 conditionalExpression: logicalOR

   37 logicalOR: logicalAND
   38          | logicalOR T_OR logicalAND

   39 logicalAND: equalityExpression
   40           | logicalAND T_AND equalityExpression

   41 equalityExpression: relationalExpression
   42                   | equalityExpression T_EQUALS relationalExpression
   43                   | equalityExpression T_NEQUALS relationalExpression

   44 relationalExpression: additiveExpression
   45                     | relationalExpression '<' additiveExpression
   46                     | relationalExpression '>' additiveExpression
   47                     | relationalExpression T_LESS_EQ additiveExpression
   48                     | relationalExpression T_GREATER_EQ additiveExpression

   49 additiveExpression: multiplicativeExpression
   50                   | additiveExpression '+' multiplicativeExpression
   51                   | additiveExpression '-' multiplicativeExpression

   52 multiplicativeExpression: castExpression
   53                         | multiplicativeExpression '*' castExpression
   54                         | multiplicativeExpression '/' castExpression

   55 castExpression: unaryExpression

   56 unaryExpression: postfixExpression
   57                | '-' postfixExpression
   58                | '!' postfixExpression

   59 postfixExpression: primary
   60                  | postfixExpression T_LEFT_PAREN args T_RIGHT_PAREN

   61 primary: T_INT
   62        | T_CHAR
   63        | T_BOOL
   64        | T_IDENTIFIER
   65        | T_LEFT_PAREN expression T_RIGHT_PAREN


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 58
    '*' (42) 53
    '+' (43) 50
    '-' (45) 51 57
    '/' (47) 54
    ';' (59) 7 28 32
    '<' (60) 45
    '>' (62) 46
    error (256)
    T_RIGHT_BRACE (258) 29
    T_LEFT_BRACE (259) 29
    T_RIGHT_PAREN (260) 13 25 60 65
    T_LEFT_PAREN (261) 13 25 60 65
    T_COMMA (262) 18 21
    T_ASSIGN (263) 7 35
    T_ARROW (264) 15
    T_OR (265) 38
    T_AND (266) 40
    T_LESS_EQ (267) 47
    T_GREATER_EQ (268) 48
    T_EQUALS (269) 42
    T_NEQUALS (270) 43
    T_IF (271) 25
    T_ELSE (272) 27
    T_RETURN (273) 28
    T_FUNC (274) 12
    T_INT (275) 61
    T_CHAR (276) 62
    T_BOOL (277) 63
    T_INT_TYPE (278) 8
    T_BOOL_TYPE (279) 10
    T_CHAR_TYPE (280) 9
    T_VOID_TYPE (281) 11
    T_IDENTIFIER (282) 7 13 17 18 35 64


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program (37)
        on left: 1 2
        on right: 0 2
    module (38)
        on left: 3 4
        on right: 2
    declaration (39)
        on left: 5 6
        on right: 4 31
    varDeclaration (40)
        on left: 7
        on right: 5
    type (41)
        on left: 8 9 10 11
        on right: 7 15 17 18
    funcDefinition (42)
        on left: 12
        on right: 3
    function (43)
        on left: 13
        on right: 12
    returnType (44)
        on left: 14 15
        on right: 13
    parameters (45)
        on left: 16 17 18
        on right: 13 18
    args (46)
        on left: 19 20 21
        on right: 21 60
    statement (47)
        on left: 22 23 24
        on right: 6
    ifStatement (48)
        on left: 25
        on right: 22
    else (49)
        on left: 26 27
        on right: 25
    returnStatement (50)
        on left: 28
        on right: 23
    block (51)
        on left: 29
        on right: 13 25 27
    blockBody (52)
        on left: 30 31
        on right: 29 31
    expressionStatement (53)
        on left: 32
        on right: 24
    expression (54)
        on left: 33
        on right: 7 25 28 32 35 65
    assignExpression (55)
        on left: 34 35
        on right: 20 21 33
    conditionalExpression (56)
        on left: 36
        on right: 34
    logicalOR (57)
        on left: 37 38
        on right: 36 38
    logicalAND (58)
        on left: 39 40
        on right: 37 38 40
    equalityExpression (59)
        on left: 41 42 43
        on right: 39 40 42 43
    relationalExpression (60)
        on left: 44 45 46 47 48
        on right: 41 42 43 45 46 47 48
    additiveExpression (61)
        on left: 49 50 51
        on right: 44 45 46 47 48 50 51
    multiplicativeExpression (62)
        on left: 52 53 54
        on right: 49 50 51 53 54
    castExpression (63)
        on left: 55
        on right: 52 53 54
    unaryExpression (64)
        on left: 56 57 58
        on right: 55
    postfixExpression (65)
        on left: 59 60
        on right: 56 57 58 60
    primary (66)
        on left: 61 62 63 64 65
        on right: 59


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • module

    $end          shift, and go to state 2
    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_IF          shift, and go to state 6
    T_RETURN      shift, and go to state 7
    T_FUNC        shift, and go to state 8
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_INT_TYPE    shift, and go to state 12
    T_BOOL_TYPE   shift, and go to state 13
    T_CHAR_TYPE   shift, and go to state 14
    T_VOID_TYPE   shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 16

    module                    go to state 17
    declaration               go to state 18
    varDeclaration            go to state 19
    type                      go to state 20
    funcDefinition            go to state 21
    statement                 go to state 22
    ifStatement               go to state 23
    returnStatement           go to state 24
    expressionStatement       go to state 25
    expression                go to state 26
    assignExpression          go to state 27
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 2

    0 $accept: program $end •

    $default  accept


State 3

   65 primary: T_LEFT_PAREN • expression T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 16

    expression                go to state 39
    assignExpression          go to state 27
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 4

   57 unaryExpression: '-' • postfixExpression

    T_LEFT_PAREN  shift, and go to state 3
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    postfixExpression  go to state 41
    primary            go to state 38


State 5

   58 unaryExpression: '!' • postfixExpression

    T_LEFT_PAREN  shift, and go to state 3
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    postfixExpression  go to state 42
    primary            go to state 38


State 6

   25 ifStatement: T_IF • T_LEFT_PAREN expression T_RIGHT_PAREN block else

    T_LEFT_PAREN  shift, and go to state 43


State 7

   28 returnStatement: T_RETURN • expression ';'

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 16

    expression                go to state 44
    assignExpression          go to state 27
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 8

   12 funcDefinition: T_FUNC • function

    T_IDENTIFIER  shift, and go to state 45

    function  go to state 46


State 9

   61 primary: T_INT •

    $default  reduce using rule 61 (primary)


State 10

   62 primary: T_CHAR •

    $default  reduce using rule 62 (primary)


State 11

   63 primary: T_BOOL •

    $default  reduce using rule 63 (primary)


State 12

    8 type: T_INT_TYPE •

    $default  reduce using rule 8 (type)


State 13

   10 type: T_BOOL_TYPE •

    $default  reduce using rule 10 (type)


State 14

    9 type: T_CHAR_TYPE •

    $default  reduce using rule 9 (type)


State 15

   11 type: T_VOID_TYPE •

    $default  reduce using rule 11 (type)


State 16

   35 assignExpression: T_IDENTIFIER • T_ASSIGN expression
   64 primary: T_IDENTIFIER •

    T_ASSIGN  shift, and go to state 47

    $default  reduce using rule 64 (primary)


State 17

    2 program: program module •

    $default  reduce using rule 2 (program)


State 18

    4 module: declaration •

    $default  reduce using rule 4 (module)


State 19

    5 declaration: varDeclaration •

    $default  reduce using rule 5 (declaration)


State 20

    7 varDeclaration: type • T_IDENTIFIER T_ASSIGN expression ';'

    T_IDENTIFIER  shift, and go to state 48


State 21

    3 module: funcDefinition •

    $default  reduce using rule 3 (module)


State 22

    6 declaration: statement •

    $default  reduce using rule 6 (declaration)


State 23

   22 statement: ifStatement •

    $default  reduce using rule 22 (statement)


State 24

   23 statement: returnStatement •

    $default  reduce using rule 23 (statement)


State 25

   24 statement: expressionStatement •

    $default  reduce using rule 24 (statement)


State 26

   32 expressionStatement: expression • ';'

    ';'  shift, and go to state 49


State 27

   33 expression: assignExpression •

    $default  reduce using rule 33 (expression)


State 28

   34 assignExpression: conditionalExpression •

    $default  reduce using rule 34 (assignExpression)


State 29

   36 conditionalExpression: logicalOR •
   38 logicalOR: logicalOR • T_OR logicalAND

    T_OR  shift, and go to state 50

    $default  reduce using rule 36 (conditionalExpression)


State 30

   37 logicalOR: logicalAND •
   40 logicalAND: logicalAND • T_AND equalityExpression

    T_AND  shift, and go to state 51

    $default  reduce using rule 37 (logicalOR)


State 31

   39 logicalAND: equalityExpression •
   42 equalityExpression: equalityExpression • T_EQUALS relationalExpression
   43                   | equalityExpression • T_NEQUALS relationalExpression

    T_EQUALS   shift, and go to state 52
    T_NEQUALS  shift, and go to state 53

    $default  reduce using rule 39 (logicalAND)


State 32

   41 equalityExpression: relationalExpression •
   45 relationalExpression: relationalExpression • '<' additiveExpression
   46                     | relationalExpression • '>' additiveExpression
   47                     | relationalExpression • T_LESS_EQ additiveExpression
   48                     | relationalExpression • T_GREATER_EQ additiveExpression

    '<'           shift, and go to state 54
    '>'           shift, and go to state 55
    T_LESS_EQ     shift, and go to state 56
    T_GREATER_EQ  shift, and go to state 57

    $default  reduce using rule 41 (equalityExpression)


State 33

   44 relationalExpression: additiveExpression •
   50 additiveExpression: additiveExpression • '+' multiplicativeExpression
   51                   | additiveExpression • '-' multiplicativeExpression

    '+'  shift, and go to state 58
    '-'  shift, and go to state 59

    $default  reduce using rule 44 (relationalExpression)


State 34

   49 additiveExpression: multiplicativeExpression •
   53 multiplicativeExpression: multiplicativeExpression • '*' castExpression
   54                         | multiplicativeExpression • '/' castExpression

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61

    $default  reduce using rule 49 (additiveExpression)


State 35

   52 multiplicativeExpression: castExpression •

    $default  reduce using rule 52 (multiplicativeExpression)


State 36

   55 castExpression: unaryExpression •

    $default  reduce using rule 55 (castExpression)


State 37

   56 unaryExpression: postfixExpression •
   60 postfixExpression: postfixExpression • T_LEFT_PAREN args T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 62

    $default  reduce using rule 56 (unaryExpression)


State 38

   59 postfixExpression: primary •

    $default  reduce using rule 59 (postfixExpression)


State 39

   65 primary: T_LEFT_PAREN expression • T_RIGHT_PAREN

    T_RIGHT_PAREN  shift, and go to state 63


State 40

   64 primary: T_IDENTIFIER •

    $default  reduce using rule 64 (primary)


State 41

   57 unaryExpression: '-' postfixExpression •
   60 postfixExpression: postfixExpression • T_LEFT_PAREN args T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 62

    $default  reduce using rule 57 (unaryExpression)


State 42

   58 unaryExpression: '!' postfixExpression •
   60 postfixExpression: postfixExpression • T_LEFT_PAREN args T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 62

    $default  reduce using rule 58 (unaryExpression)


State 43

   25 ifStatement: T_IF T_LEFT_PAREN • expression T_RIGHT_PAREN block else

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 16

    expression                go to state 64
    assignExpression          go to state 27
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 44

   28 returnStatement: T_RETURN expression • ';'

    ';'  shift, and go to state 65


State 45

   13 function: T_IDENTIFIER • T_LEFT_PAREN parameters T_RIGHT_PAREN returnType block

    T_LEFT_PAREN  shift, and go to state 66


State 46

   12 funcDefinition: T_FUNC function •

    $default  reduce using rule 12 (funcDefinition)


State 47

   35 assignExpression: T_IDENTIFIER T_ASSIGN • expression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 16

    expression                go to state 67
    assignExpression          go to state 27
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 48

    7 varDeclaration: type T_IDENTIFIER • T_ASSIGN expression ';'

    T_ASSIGN  shift, and go to state 68


State 49

   32 expressionStatement: expression ';' •

    $default  reduce using rule 32 (expressionStatement)


State 50

   38 logicalOR: logicalOR T_OR • logicalAND

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    logicalAND                go to state 69
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 51

   40 logicalAND: logicalAND T_AND • equalityExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    equalityExpression        go to state 70
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 52

   42 equalityExpression: equalityExpression T_EQUALS • relationalExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    relationalExpression      go to state 71
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 53

   43 equalityExpression: equalityExpression T_NEQUALS • relationalExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    relationalExpression      go to state 72
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 54

   45 relationalExpression: relationalExpression '<' • additiveExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    additiveExpression        go to state 73
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 55

   46 relationalExpression: relationalExpression '>' • additiveExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    additiveExpression        go to state 74
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 56

   47 relationalExpression: relationalExpression T_LESS_EQ • additiveExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    additiveExpression        go to state 75
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 57

   48 relationalExpression: relationalExpression T_GREATER_EQ • additiveExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    additiveExpression        go to state 76
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 58

   50 additiveExpression: additiveExpression '+' • multiplicativeExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    multiplicativeExpression  go to state 77
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 59

   51 additiveExpression: additiveExpression '-' • multiplicativeExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    multiplicativeExpression  go to state 78
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 60

   53 multiplicativeExpression: multiplicativeExpression '*' • castExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    castExpression     go to state 79
    unaryExpression    go to state 36
    postfixExpression  go to state 37
    primary            go to state 38


State 61

   54 multiplicativeExpression: multiplicativeExpression '/' • castExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 40

    castExpression     go to state 80
    unaryExpression    go to state 36
    postfixExpression  go to state 37
    primary            go to state 38


State 62

   60 postfixExpression: postfixExpression T_LEFT_PAREN • args T_RIGHT_PAREN

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 16

    $default  reduce using rule 19 (args)

    args                      go to state 81
    assignExpression          go to state 82
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 63

   65 primary: T_LEFT_PAREN expression T_RIGHT_PAREN •

    $default  reduce using rule 65 (primary)


State 64

   25 ifStatement: T_IF T_LEFT_PAREN expression • T_RIGHT_PAREN block else

    T_RIGHT_PAREN  shift, and go to state 83


State 65

   28 returnStatement: T_RETURN expression ';' •

    $default  reduce using rule 28 (returnStatement)


State 66

   13 function: T_IDENTIFIER T_LEFT_PAREN • parameters T_RIGHT_PAREN returnType block

    T_INT_TYPE   shift, and go to state 12
    T_BOOL_TYPE  shift, and go to state 13
    T_CHAR_TYPE  shift, and go to state 14
    T_VOID_TYPE  shift, and go to state 15

    $default  reduce using rule 16 (parameters)

    type        go to state 84
    parameters  go to state 85


State 67

   35 assignExpression: T_IDENTIFIER T_ASSIGN expression •

    $default  reduce using rule 35 (assignExpression)


State 68

    7 varDeclaration: type T_IDENTIFIER T_ASSIGN • expression ';'

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 16

    expression                go to state 86
    assignExpression          go to state 27
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 69

   38 logicalOR: logicalOR T_OR logicalAND •
   40 logicalAND: logicalAND • T_AND equalityExpression

    T_AND  shift, and go to state 51

    $default  reduce using rule 38 (logicalOR)


State 70

   40 logicalAND: logicalAND T_AND equalityExpression •
   42 equalityExpression: equalityExpression • T_EQUALS relationalExpression
   43                   | equalityExpression • T_NEQUALS relationalExpression

    T_EQUALS   shift, and go to state 52
    T_NEQUALS  shift, and go to state 53

    $default  reduce using rule 40 (logicalAND)


State 71

   42 equalityExpression: equalityExpression T_EQUALS relationalExpression •
   45 relationalExpression: relationalExpression • '<' additiveExpression
   46                     | relationalExpression • '>' additiveExpression
   47                     | relationalExpression • T_LESS_EQ additiveExpression
   48                     | relationalExpression • T_GREATER_EQ additiveExpression

    '<'           shift, and go to state 54
    '>'           shift, and go to state 55
    T_LESS_EQ     shift, and go to state 56
    T_GREATER_EQ  shift, and go to state 57

    $default  reduce using rule 42 (equalityExpression)


State 72

   43 equalityExpression: equalityExpression T_NEQUALS relationalExpression •
   45 relationalExpression: relationalExpression • '<' additiveExpression
   46                     | relationalExpression • '>' additiveExpression
   47                     | relationalExpression • T_LESS_EQ additiveExpression
   48                     | relationalExpression • T_GREATER_EQ additiveExpression

    '<'           shift, and go to state 54
    '>'           shift, and go to state 55
    T_LESS_EQ     shift, and go to state 56
    T_GREATER_EQ  shift, and go to state 57

    $default  reduce using rule 43 (equalityExpression)


State 73

   45 relationalExpression: relationalExpression '<' additiveExpression •
   50 additiveExpression: additiveExpression • '+' multiplicativeExpression
   51                   | additiveExpression • '-' multiplicativeExpression

    '+'  shift, and go to state 58
    '-'  shift, and go to state 59

    $default  reduce using rule 45 (relationalExpression)


State 74

   46 relationalExpression: relationalExpression '>' additiveExpression •
   50 additiveExpression: additiveExpression • '+' multiplicativeExpression
   51                   | additiveExpression • '-' multiplicativeExpression

    '+'  shift, and go to state 58
    '-'  shift, and go to state 59

    $default  reduce using rule 46 (relationalExpression)


State 75

   47 relationalExpression: relationalExpression T_LESS_EQ additiveExpression •
   50 additiveExpression: additiveExpression • '+' multiplicativeExpression
   51                   | additiveExpression • '-' multiplicativeExpression

    '+'  shift, and go to state 58
    '-'  shift, and go to state 59

    $default  reduce using rule 47 (relationalExpression)


State 76

   48 relationalExpression: relationalExpression T_GREATER_EQ additiveExpression •
   50 additiveExpression: additiveExpression • '+' multiplicativeExpression
   51                   | additiveExpression • '-' multiplicativeExpression

    '+'  shift, and go to state 58
    '-'  shift, and go to state 59

    $default  reduce using rule 48 (relationalExpression)


State 77

   50 additiveExpression: additiveExpression '+' multiplicativeExpression •
   53 multiplicativeExpression: multiplicativeExpression • '*' castExpression
   54                         | multiplicativeExpression • '/' castExpression

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61

    $default  reduce using rule 50 (additiveExpression)


State 78

   51 additiveExpression: additiveExpression '-' multiplicativeExpression •
   53 multiplicativeExpression: multiplicativeExpression • '*' castExpression
   54                         | multiplicativeExpression • '/' castExpression

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61

    $default  reduce using rule 51 (additiveExpression)


State 79

   53 multiplicativeExpression: multiplicativeExpression '*' castExpression •

    $default  reduce using rule 53 (multiplicativeExpression)


State 80

   54 multiplicativeExpression: multiplicativeExpression '/' castExpression •

    $default  reduce using rule 54 (multiplicativeExpression)


State 81

   21 args: args • T_COMMA assignExpression
   60 postfixExpression: postfixExpression T_LEFT_PAREN args • T_RIGHT_PAREN

    T_RIGHT_PAREN  shift, and go to state 87
    T_COMMA        shift, and go to state 88


State 82

   20 args: assignExpression •

    $default  reduce using rule 20 (args)


State 83

   25 ifStatement: T_IF T_LEFT_PAREN expression T_RIGHT_PAREN • block else

    T_LEFT_BRACE  shift, and go to state 89

    block  go to state 90


State 84

   17 parameters: type • T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 91


State 85

   13 function: T_IDENTIFIER T_LEFT_PAREN parameters • T_RIGHT_PAREN returnType block
   18 parameters: parameters • T_COMMA type T_IDENTIFIER

    T_RIGHT_PAREN  shift, and go to state 92
    T_COMMA        shift, and go to state 93


State 86

    7 varDeclaration: type T_IDENTIFIER T_ASSIGN expression • ';'

    ';'  shift, and go to state 94


State 87

   60 postfixExpression: postfixExpression T_LEFT_PAREN args T_RIGHT_PAREN •

    $default  reduce using rule 60 (postfixExpression)


State 88

   21 args: args T_COMMA • assignExpression

    T_LEFT_PAREN  shift, and go to state 3
    '-'           shift, and go to state 4
    '!'           shift, and go to state 5
    T_INT         shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_BOOL        shift, and go to state 11
    T_IDENTIFIER  shift, and go to state 16

    assignExpression          go to state 95
    conditionalExpression     go to state 28
    logicalOR                 go to state 29
    logicalAND                go to state 30
    equalityExpression        go to state 31
    relationalExpression      go to state 32
    additiveExpression        go to state 33
    multiplicativeExpression  go to state 34
    castExpression            go to state 35
    unaryExpression           go to state 36
    postfixExpression         go to state 37
    primary                   go to state 38


State 89

   29 block: T_LEFT_BRACE • blockBody T_RIGHT_BRACE

    $default  reduce using rule 30 (blockBody)

    blockBody  go to state 96


State 90

   25 ifStatement: T_IF T_LEFT_PAREN expression T_RIGHT_PAREN block • else

    T_ELSE  shift, and go to state 97

    $default  reduce using rule 26 (else)

    else  go to state 98


State 91

   17 parameters: type T_IDENTIFIER •

    $default  reduce using rule 17 (parameters)


State 92

   13 function: T_IDENTIFIER T_LEFT_PAREN parameters T_RIGHT_PAREN • returnType block

    T_ARROW  shift, and go to state 99

    $default  reduce using rule 14 (returnType)

    returnType  go to state 100


State 93

   18 parameters: parameters T_COMMA • type T_IDENTIFIER

    T_INT_TYPE   shift, and go to state 12
    T_BOOL_TYPE  shift, and go to state 13
    T_CHAR_TYPE  shift, and go to state 14
    T_VOID_TYPE  shift, and go to state 15

    type  go to state 101


State 94

    7 varDeclaration: type T_IDENTIFIER T_ASSIGN expression ';' •

    $default  reduce using rule 7 (varDeclaration)


State 95

   21 args: args T_COMMA assignExpression •

    $default  reduce using rule 21 (args)


State 96

   29 block: T_LEFT_BRACE blockBody • T_RIGHT_BRACE
   31 blockBody: blockBody • declaration
